Fixed overflow bug on channel name and made some formatting tweaks to channel list

--- a/src/components/ChannelList/ChannelList.css
+++ b/src/components/ChannelList/ChannelList.css
@@ -21,10 +21,12 @@
     background-color: #fff;
     border-bottom: black;
     border-bottom-width: 2px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .IconButton {
-    padding: 0;
+    padding-bottom: 1px;
     margin: 0;
     background-color: transparent;
     border: none;
@@ -41,7 +43,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding-right: 10px;
 }
 
 .ChannelItem:hover  {
@@ -61,6 +62,7 @@
 }
 
 .ChannelTitle {
+    height:16px;
     font-size: 16px;
     font-family: Roboto;
     font-style: normal;
@@ -68,6 +70,8 @@
     text-align:'left';
 	margin-left: 10px;
     white-space: nowrap;
+    overflow-x:hidden;
+    text-overflow: ellipsis;
     float: left;
     cursor: pointer;
 }
